css/styles.css
/* General Styles */
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    padding-top: 100px;
    box-sizing: border-box;
}

#tabContents {
    margin-top: 100px; /* Add this to move the div down */
}

/* Header Styles */
.header-content {
    display: flex;
    align-items: center;
}

.admin-logo {
    display: flex;
    align-items: center;
    
}

.admin-logo img {
    height: 75px;
    width: 75px;
    margin-left: 40px; /* Add spacing between logo and text */
}

.admin-logo h3,
.admin-logo h4 {
    font-size: 13px;
    color: white;
    font-weight: bold;
    padding-left: 8px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.sub-name{
    font-size: 18px; 
margin-left: 1px; 
font-family:Georgia, 'Times New Roman', Times, serif;
padding-left: 8px;
}

.admin-logo h3,
.admin-logo-text h4 {
    margin: 0; /* Remove extra margin */
}

.sub-name {
    font-size: 13px;
    margin-top: 0;
    color: #f5f1f1;
}

.header {
    background-color: #550000;
    display: flex;
    justify-content: space-between; /* Space between logo + menu and icons */
    color: white;
    width: 100vw;
    padding: 15px 30px;
    width: calc(100% - 250px); /* Adjust for sidebar width */
}

.header-icons {
    display: flex;
}

.header-icons button {
    background-color: transparent;
    border: none;
    color: white;
    font-size: 16px;
    margin: 0 10px; /* Adjust spacing between icons */
    cursor: pointer;
}

.notification-count {
    background-color: red;
    color: white;
    font-size: 12px;
    border-radius: 50%;
    padding: 2px 6px;
    margin-left: 5px;
}

.openbtn, .closebtn {
    background-color: #333;
    color: white;
    border: none;
    font-size: 24px;
    cursor: pointer;
}

.sidebar-openbtn{
    background-color: transparent;
    color: white;
    border: none;
    font-size: 24px;
    font-weight: bolder;
    cursor: pointer;
}


.sidebar-openbtn:hover {
    color: #ffbb00;
    background-color: transparent;
}

.openbtn:hover, .closebtn:hover {
    background-color: #555;
}

/* Sidebar Styles */

.sidebar a {
    padding: 10px 15px;
    text-decoration: none;
    font-size: 18px;
    color: white;
    display: block;
}

.sidebar a:hover {
    background-color: #555;
}


/* Tabs Styles */
.tabcontent {
    display: none;
}

.tablinks {
    background-color: #333;
    color: white;
    border: none;
    padding: 10px 15px;
    cursor: pointer;
    font-size: 16px;
}

.tablinks.active {
    background-color: #555;
}

/* Table Styles */
#newRequestsTable, #staffTable, #clientsTable {
    width: 100%;
    border-collapse: collapse;
    margin-top: 10px;
}


#newRequestsTable th, #staffTable th, #clientsTable th {
    background-color: #A90000;
    color: white;
    padding: 15px;
}

/* Buttons */
button {
    padding: 10px 20px;
    margin: 10px;
    background-color: #0288d1;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    font-size: 16px;
}

.logInMenu-container button {
    flex-direction: column;
    width: 350px;
    height: 48px;
    padding: 10px 40px;
    transform: translateX(5%);

}

#client-login-menu{
    background-color: #4642FF;
    text-align: center;
}

#lab-staff-login{
    background-color: #00761A;
    text-align: center;
}

#admin-login{
    background-color: #B60000;
    text-align: center;
}

.clientLogInMenu-container button {
    flex-direction: column;
    width: 350px;
    height: 48px;
    padding: 10px 40px;
    transform: translateX(5%);
}

.clientLogInMenu-container p {
    margin-top: -15px;
    font-size: 13.5px;
    color: #666;
    font-style: italic;
   
    text-align: center;


}

#IclientLogIn-btn{
    background-color: #4642FF;
    text-align: center;
}

#EclientLogIn-btn{
    background-color: #00761A;
    text-align: center;
}






button:hover {
    background-color: #0277bd;
}

/* Utility Classes */
.hidden {
    display: none;
}

/* Error Messages */
#error-message {
    display: none; /* Hide error messages by default */
}




/* Log-In Forms */
form {
    display: flex;
    flex-direction: column;
    width: 350px;
    margin: 0 auto;
}

input {
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 10px;
    background-color: #D9D9D9;
    color: #000000;
    border: 0px;
    font-size: 15px;
}

#sign-inbtn  {
    padding: 10px;
    margin: 10px;
    background-color: #0288d1;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    font-size: 16px;
    width: 130px;
    -ms-transform: translate(5%);
    transform: translateX(75%);
}

#admin-inbtn  {
    padding: 10px;
    margin: 10px;
    background-color: #0288d1;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    font-size: 16px;
    width: 130px;
    -ms-transform: translate(5%);
    transform: translateX(75%);
}

#lab-inbtn  {
    padding: 10px;
    margin: 10px;
    background-color: #0288d1;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    font-size: 16px;
    width: 100px;
    -ms-transform: translate(5%);
    transform: translateX(120%);
}

.adm-low-label p{
    -ms-transform: translae(5%);
    transform: translateX(4.8%);
    color: black;
}

.low-label p{
    -ms-transform: translate(5%);
    transform: translateX(4.3%);
    color: black;
}

.lower-label p{
    -ms-transform: translate(5%);
    transform: translateX(0.1%);
    color: black;
    font-size: 11px;
    text-align: center;
    padding-top:10px;
}

.pswrd-low-label p{
    -ms-transform: translate(5%);
    transform: translateX(6.3%);
    color: black;
}

.pswrd-lower-label p{
    -ms-transform: translate(5%);
    transform: translateX(0.1%);
    color: black;
    font-size: 11px;
    text-align: center;
    padding-top:10px;
}

.index-lower-label p{
    -ms-transform: translate(5%);
    transform: translateX(0.1%);
    color: black;
    font-size: 11px;
    text-align: center;
    padding-top:10px;
}
/* ... */

